--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
-            Barbearia Alura
-        </div>
+        <header>
+            <h1 class="titulo-principal">Barbearia Alura</h1>
+        </header
         <img id="banner" src="banner.jpg">
-        <div>
-            <h1 style="text-align: center">Sobre a Barbearia Alura</h1>
+        <div class="principal">
+            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
     
@@ -21,7 +21,7 @@
         
         </div>
         <div class="beneficios"> 
-            <h2>Benefícios</h2>   
+            <h3 class="titulo-centralizado">Benefícios</h3>   
         <ul>
             <li class="Itens">*Atendimento aos Clientes</li>
             <li class="Itens">*Espaço diferenciado</li>
