--- a/Semana4_Curso2/index.html
+++ b/Semana4_Curso2/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - Barbearia Alura</title>
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1><img src="logo.png"></h1>
 
-        <ul>
+        <nav>
+        <ul class="navegacao">
             <li><a href="index.html"></a>Home</li>
             <li><a href="produtos.html"></a>Produtos</li>
             <li><a href="contato.html"></a>Contatos</li>
         </ul>
-
+        </nav>
     </header>
 </body>
 </html>
